# PimPyLibrary

./: .gitmodules  CMakeLists.txt  README.md  setup.py
custom-ops/pytorch/: CMakeLists.txt  __init__.py  pim_dense.py  pim_eltwise.py  pim_fused_ffn.py  pim_gemm.py  pim_relu.py  setup.py  test_eltwise.py
custom-ops/pytorch/tests/: test_dense.py  test_eltwise.py
custom-ops/pytorch/unit-tests/: test_dense.py  test_eltwise.py  test_eltwise_add.py  test_relu.py
custom-ops/tensorflow/: CMakeLists.txt  setup.py
custom-ops/tensorflow/cc/kernels/: pim_deinit.cc  pim_dense.cc  pim_eltwise.cc  pim_init.cc  pim_relu.cc
custom-ops/tensorflow/cc/ops/: pim_dense_ops.cc  pim_relu_ops.cc
custom-ops/tensorflow/python/: __init__.py  pim_layers.py  pim_tf_ops.py
custom-ops/tensorflow/unit-tests/: test_dense.py  test_eltwise.py  test_eltwise_add.py  test_eltwise_mul.py
examples/numpy/: test_elt_add.py  test_elt_mul.py  test_gemm.py  test_relu.py
examples/pytorch/: test_api.py  test_dense.py  test_dense_multigpu.py  test_eltwise_add.py  test_eltwise_mul.py  test_fused_ffn.py  test_gemm.py  test_relu.py
examples/tensorflow/: test_dense.py  test_relu.py
examples/tensorflow/model_latency_tests/: alexnet.py  gnmt.py
pim-py-bind/: pim_py_bind.cpp
tests/: elt_add.py
tests/model_latency_tests/: alexnet.py  deepspeech2.py  resnet50.py  rnnt.py  run_models.py
tests/tensorflow/model_latency_tests/: deepspeech2.py  resnet50.py  rnnt.py  run_models.py
tests/unittests/: test_elt_add.py  test_elt_mul.py  test_gemv.py
